package(default_visibility = ["//visibility:public"])

sh_binary(
    name = "gen-cue-string-field",
    srcs = ["gen_cue_string_field.sh"],
)

config_setting(
    name = "linux_amd64",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
    visibility = ["//visibility:private"],
)

config_setting(
    name = "darwin_amd64",
    constraint_values = [
        "@platforms//os:macos",
        "@platforms//cpu:x86_64",
    ],
    visibility = ["//visibility:private"],
)

alias(
    name = "cue_cli",
    actual = select({
        ":linux_amd64": "@cue_binaries_linux_amd64//:cue_cli",
        ":darwin_amd64": "@cue_binaries_darwin_amd64//:cue_cli",
    }),
)
