load("//cue:defs.bzl", "cue_export", "cue_library", "cue_string_field")

cue_library(
    name = "k8s",
    srcs = ["k8s.cue"],
)

cue_export(
    name = "k8s_manifest",
    expression = "listObject",
    deps = [":k8s"],
)

cue_string_field(
    name = "string_field",
    srcs = ["string_value.txt"],
    identifier = "stringField",
)
